--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <style>
+        body {
+            zoom: 200%;
+        }
+        
         .button {
             display: block;
             text-align: center;
@@ -63,7 +67,7 @@
         </span>
   </button>
     <div id="divyap">
-        <p id="yap">var, let, ja const eroavat toisistaan niin, että var on tosi vanha tapa asettaa variable. Sitä käytetään vaan yhteensopivuuden takia vanhoiden selaimien kanssa. </p>
+        <p id="yap">var, let, ja const eroavat toisistaan niin, että var on tosi vanha tapa asettaa variable. Sitä käytetään vain yhteensopivuuden takia vanhojen selaimien kanssa. const on lyhenne sanasta "constant", joka tarkoittaa sitä että se pysyy aina samana kun se on asetettu, eikä sitä voi muuttaa muilla variableilla.</p>
     </div>
 </body>
 </html>
