Added bladee and hover effects

--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
     <div id="divyap">
         <p id="yap">var, let, ja const eroavat toisistaan niin, että var on tosi vanha tapa asettaa variable. Sitä käytetään vain yhteensopivuuden takia vanhojen selaimien kanssa. const on lyhenne sanasta "constant", joka tarkoittaa sitä että se pysyy aina samana kun se on asetettu, eikä sitä voi muuttaa muilla variableilla.</p>
     </div>
+    <div id="blade">bladee - TL;DR</div>
+    <audio id="tldr" controls>
+        <source src="tldr.mp3" type="audio/mpeg">
+      TL;DR
+      </audio>
 </body>
 </html>
