i forgot what i added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             color: white;
             background-color: #191919;
             text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
+            border-radius: 5px;
+            border: solid;
+            border-width: 1.5px;
         }
         #button2 {
             zoom: 300%;
