en tiiä teinkö oikein lol

--- a/index.html
+++ b/index.html
@@ -81,5 +81,13 @@
    </span></button>
       <p id="loopius"></p>
 </div>
+<div>
+    <div class="flexbox1">
+        <button class="button" onclick="eläimet()" ondblclick=""><span href="#" class="innerButton"></span>
+            Another Button for Loop
+       </span></button>
+          <p id="elä"></p>
+    </div>
+</div>
 </body>
 </html>
